task1/test_results_no_defects/infer_test/uninit_memory_access/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/uninit_memory_access.c:75: error: Nullptr Dereference
  Pulse found a potential null pointer dereference  on line 69.
  73. 	}
  74.      ptr = &p2;
  75.      printf("%d \n",**ptr); /*Tool should not detect this line as error*/ /*No ERROR:Uninitialized Memory Access*/
                          ^
  76.      free(p1);
  77. }

#1
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/uninit_memory_access.c:75: error: Null Dereference
  pointer `*ptr` last assigned on line 68 could be null and is dereferenced at line 75, column 21.
  73. 	}
  74.      ptr = &p2;
  75.      printf("%d \n",**ptr); /*Tool should not detect this line as error*/ /*No ERROR:Uninitialized Memory Access*/
                          ^
  76.      free(p1);
  77. }

#2
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/uninit_memory_access.c:128: error: Null Dereference
  pointer `str1` last assigned on line 126 could be null and is dereferenced by call to `uninit_memory_access_006_func_001()` at line 128, column 5.
  126.     char *str1 = (char *) calloc(25,sizeof(char));
  127.     char *str2 = "STRING";
  128.     uninit_memory_access_006_func_001(str1, str2);
           ^
  129.     printf("%s\n", str1);
  130. }

#3
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/uninit_memory_access.c:235: error: Nullptr Dereference
  Pulse found a potential null pointer dereference  on line 231.
  233. 	for(i=0;i<10;i++)
  234. 	{
  235. 		uninit_memory_access_009_doubleptr_gbl[i]=(long*) malloc(10*sizeof(long));
         ^
  236. 	}
  237. 	for(i=0;i<10;i++)

#4
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/uninit_memory_access.c:235: error: Null Dereference
  pointer `uninit_memory_access_009_doubleptr_gbl` last assigned on line 231 could be null and is dereferenced at line 235, column 3.
  233. 	for(i=0;i<10;i++)
  234. 	{
  235. 		uninit_memory_access_009_doubleptr_gbl[i]=(long*) malloc(10*sizeof(long));
         ^
  236. 	}
  237. 	for(i=0;i<10;i++)

#5
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/uninit_memory_access.c:376: error: Null Dereference
  pointer `s1` last assigned on line 375 could be null and is dereferenced at line 376, column 3.
  374. 
  375.   s1 = (uninit_memory_access_013_s_001*)calloc(1,sizeof(uninit_memory_access_013_s_001));
  376.   s1->int_a = 10;
         ^
  377.   s1->int_c = 20;
  378.   s1->bool_b = true;

#6
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/uninit_memory_access.c:408: error: Null Dereference
  pointer `u` last assigned on line 407 could be null and is dereferenced at line 408, column 4.
  406. 		{
  407. 			u = (uninit_memory_access_014_u_001 *)calloc(1,sizeof(uninit_memory_access_014_u_001));
  408. 			u->a = 40;
          ^
  409. 			return u;
  410. 		}

#7
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/uninit_memory_access.c:460: error: Nullptr Dereference
  Pulse found a potential null pointer dereference  on line 454.
  458. 		for ( j=0 ;j<4; j++)
  459. 		{
  460. 			*(p[i]+j) += *(p[i]+j); /*Tool should not detect this line as error*/ /*No ERROR:Uninitialized Memory Access*/
                       ^
  461. 		}
  462. 	}

#8
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/uninit_memory_access.c:455: error: Null Dereference
  pointer `p` last assigned on line 454 could be null and is dereferenced by call to `memcpy()` at line 455, column 2.
  453. 	int i,j;
  454. 	p= (int (*)[]) malloc (sizeof arr);
  455. 	memcpy(p, arr, sizeof(arr));
        ^
  456. 	for (i = 0;i< 4; i++)
  457. 	{

Found 9 issues
                Issue Type(ISSUED_TYPE_ID): #
        Null Dereference(NULL_DEREFERENCE): 6
  Nullptr Dereference(NULLPTR_DEREFERENCE): 3
